--- a/ansible/configs/migrate-from-vmware-to-red-hat-infrastructure/default_vars.yml
+++ b/ansible/configs/migrate-from-vmware-to-red-hat-infrastructure/default_vars.yml
@@ -1,33 +1,29 @@
 ---
-
-env_type: multi-cloud-capsule 
-output_dir: /tmp/workdir                # Writable working scratch directory
-email: "{{env_type}}@example.com"
-guid: defaultguid
-
-
-deploy_local_ssh_config_location: "{{output_dir}}/"
-key_name: ocpkey                        # Keyname must exist in AWS
-use_own_key: true
-env_authorized_key: "{{guid}}key"
-set_env_authorized_key: true
-default_key_name: ~/.ssh/{{key_name}}.pem
-
-install_bastion: true
-install_common: true
-install_ipa_client: false
-tower_run: false
-update_packages: false
-update_all_packages: false
-install_satellite: True
-configure_satellite: false
-
 project_tag: "{{ env_type }}-{{ guid }}"
 
-capsule_repos:
-  - rhel-7-server-rpms
-  - rhel-server-rhscl-7-rpms
-  - rhel-7-server-satellite-maintenance-6-rpms
-  - rhel-7-server-ansible-2.6-rpms
-  - rhel-7-server-satellite-capsule-6.4-rpms
-  - rhel-7-server-satellite-tools-6.4-rpms
+yum_repositories:
+  - rhel-7-server-rpms:
+      name: Red Hat Enterprise Linux 7
+      baseurl: "{{ own_repo_path }}/rhel-7-server-rpms"
+      enabled: true
+      gpgcheck: false
+  - rhel-7-server-rh-common-rpms:
+      name: Red Hat Enterprise Linux 7 Common
+      baseurl: "{{ own_repo_path }}/rhel-7-server-rh-common-rpms"
+      enabled: true
+      gpgcheck: false
+  - rhel-7-server-extras-rpms:
+      name: Red Hat Enterprise Linux 7 Extras
+      baseurl: "{{ own_repo_path }}/rhel-7-server-extras-rpms"
+      enabled: true
+      gpgcheck: false
+  - rhel-7-server-optional-rpms:
+      name: Red Hat Enterprise Linux 7 Optional
+      baseurl: "{{ own_repo_path }}/rhel-7-server-optional-rpms"
+      enabled: true
+      gpgcheck: false
+  - rhel-7-server-ansible-2.9-rpms:
+      name: Red Hat Ansible 2.9
+      baseurl: "{{ own_repo_path }}/rhel-7-server-ansible-2.9-rpms"
+      enabled: true
+      gpgcheck: false
