--- a/ansible/configs/migrate-from-vmware-to-red-hat-infrastructure/post_software.yml
+++ b/ansible/configs/migrate-from-vmware-to-red-hat-infrastructure/post_software.yml
@@ -1,24 +1,10 @@
-- name: Step 00xxxxx post software
-  hosts: support
-  gather_facts: False
-  become: yes
+- name: Step 005 Post Software
+  hosts: localhost
+  gather_facts: false
+  become: false
   tasks:
     - debug:
-        msg: "Post-Software tasks Started"
-
-
-# - name: Step lab post software deployment
-#   hosts: bastions
-#   gather_facts: False
-#   become: yes
-#   tags:
-#     - opentlc_bastion_tasks
-#   tasks:
-#     - import_role:
-#         name: bastion-opentlc-ipa
-#       when: install_ipa_client|bool
-
-
+        msg: "Step 005 Post Software"
 
 - name: PostSoftware flight-check
   hosts: localhost
@@ -28,9 +14,5 @@
   tags:
     - post_flight_check
   tasks:
-
     - debug:
         msg: "Post-Software checks completed successfully"
-  
-   
-
