--- a/ansible/configs/migrate-from-vmware-to-red-hat-infrastructure/pre_software.yml
+++ b/ansible/configs/migrate-from-vmware-to-red-hat-infrastructure/pre_software.yml
@@ -10,30 +10,34 @@
         name: infra-local-create-ssh_key
       when: set_env_authorized_key | bool
 
-- name: Configure all hosts with Repositories
+
+- name: Configure all hosts with Repositories, Common Files and Set environment key
   hosts:
     - all:!windows
   become: true
   gather_facts: False
   tags:
-    - step004
     - common_tasks
   roles:
-    # - { role: "set-repositories", when: 'repo_method is defined' }
-    - { role: "set_env_authorized_key", when: 'set_env_authorized_key' }
+    - role: set-repositories
+      when: repo_method is defined
 
+    - role: common
+      when: install_common | bool
 
-# - name: Configuring Bastion Hosts
-#   hosts: bastions
-#   become: true
-#   roles:
-#     - { role: "common", when: 'install_common' }
-#     - {role: "bastion", when: 'install_bastion' }
-#     - { role: "bastion-opentlc-ipa", when: 'install_ipa_client' }
+    - role: set_env_authorized_key
+      when: set_env_authorized_key | bool
 
-#   tags:
-#     - step004
-#     - bastion_tasks
+- name: Configuring Bastion Hosts
+  hosts: bastions
+  become: true
+  gather_facts: False
+  roles:
+    -  role: bastion
+       when: install_bastion | bool
+  tags:
+    - bastion_tasks
+
 - name: PreSoftware flight-check
   hosts: localhost
   connection: local
